--- a/labTask/list07.ipynb
+++ b/labTask/list07.ipynb
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    " 1- (6*22.5)/(10*(100-1))"
+    "1- (6*22.5)/(10*(100-1))  #o Spearman's rank correlation coeficient"
    ]
   },
   {
@@ -187,14 +187,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lifetime = pd.Series([11,61,11,9,2,10,2,,6,8,3,8,1,1,7,8])\n",
-    "size = pd.Series(['small', 'medium', 'small', 'large'])\n",
-    "pd.Categorical(size, categories=['micro','small', 'medium', 'small', 'large'])"
+    "lifetime = pd.Series([11,61,11,9,2,10,2,6,8,3,8,1,1,7,8])\n",
+    "size = pd.Series(['small', 'large','medium','large','large','small','micro','small','small','small','micro','micro','micro','medium','micro'])\n",
+    "mapping = {'micro':1,'small':2,'medium':3,'large':4}\n",
+    "sk1 = pd.Series(size).map(mapping)\n",
+    "csk1= pd.Series(sk1).astype('category')\n",
+    "final = csk1.cat.codes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SignificanceResult(statistic=0.47314603201526584, pvalue=0.07486094080802914)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spearmanr(lifetime,final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
