--- a/labTask/list08.ipynb
+++ b/labTask/list08.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,10 +518,495 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\L'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\L'\n",
+      "C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_6904\\2853958894.py:1: SyntaxWarning: invalid escape sequence '\\L'\n",
+      "  pizza = pd.read_excel('D:\\LabHw\\DescriptiveStat\\data\\pizza.xlsx')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>date</th>\n",
+       "      <th>week</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>area</th>\n",
+       "      <th>count</th>\n",
+       "      <th>rabate</th>\n",
+       "      <th>price</th>\n",
+       "      <th>operator</th>\n",
+       "      <th>driver</th>\n",
+       "      <th>delivery_min</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>wine_ordered</th>\n",
+       "      <th>wine_delivered</th>\n",
+       "      <th>wrongpizza</th>\n",
+       "      <th>quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-03-01</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Camden</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>65.655</td>\n",
+       "      <td>Rhonda</td>\n",
+       "      <td>Taylor</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2014-03-01</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Westminster</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.980</td>\n",
+       "      <td>Rhonda</td>\n",
+       "      <td>Butcher</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>56.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2014-03-01</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Westminster</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.970</td>\n",
+       "      <td>Allanah</td>\n",
+       "      <td>Butcher</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>36.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2014-03-01</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Brent</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.980</td>\n",
+       "      <td>Allanah</td>\n",
+       "      <td>Taylor</td>\n",
+       "      <td>37.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2014-03-01</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Brent</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>57.555</td>\n",
+       "      <td>Rhonda</td>\n",
+       "      <td>Carter</td>\n",
+       "      <td>21.8</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1204</th>\n",
+       "      <td>1205</td>\n",
+       "      <td>2014-03-31</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Westminster</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>41.970</td>\n",
+       "      <td>Rhonda</td>\n",
+       "      <td>Farmer</td>\n",
+       "      <td>31.2</td>\n",
+       "      <td>35.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1205</th>\n",
+       "      <td>1206</td>\n",
+       "      <td>2014-03-31</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Camden</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>42.970</td>\n",
+       "      <td>Rhonda</td>\n",
+       "      <td>Carter</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>48.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1206</th>\n",
+       "      <td>1207</td>\n",
+       "      <td>2014-03-31</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Brent</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.980</td>\n",
+       "      <td>Rhonda</td>\n",
+       "      <td>Carter</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>45.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1207</th>\n",
+       "      <td>1208</td>\n",
+       "      <td>2014-03-31</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Brent</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>75.546</td>\n",
+       "      <td>Rhonda</td>\n",
+       "      <td>Carpenter</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>43.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1208</th>\n",
+       "      <td>1209</td>\n",
+       "      <td>2014-03-31</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Camden</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>69.660</td>\n",
+       "      <td>Rhonda</td>\n",
+       "      <td>Farmer</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>43.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1209 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      index       date  week  weekday         area  count  rabate   price  \\\n",
+       "0         1 2014-03-01   9.0      6.0       Camden    5.0     1.0  65.655   \n",
+       "1         2 2014-03-01   9.0      6.0  Westminster    2.0     0.0  26.980   \n",
+       "2         3 2014-03-01   9.0      6.0  Westminster    3.0     0.0  40.970   \n",
+       "3         4 2014-03-01   9.0      6.0        Brent    2.0     0.0  25.980   \n",
+       "4         5 2014-03-01   9.0      6.0        Brent    5.0     1.0  57.555   \n",
+       "...     ...        ...   ...      ...          ...    ...     ...     ...   \n",
+       "1204   1205 2014-03-31  14.0      1.0  Westminster    3.0     0.0  41.970   \n",
+       "1205   1206 2014-03-31  14.0      1.0       Camden    3.0     0.0  42.970   \n",
+       "1206   1207 2014-03-31  14.0      1.0        Brent    2.0     0.0  26.980   \n",
+       "1207   1208 2014-03-31  14.0      1.0        Brent    6.0     1.0  75.546   \n",
+       "1208   1209 2014-03-31  14.0      1.0       Camden    4.0     1.0  69.660   \n",
+       "\n",
+       "     operator     driver  delivery_min  temperature  wine_ordered  \\\n",
+       "0      Rhonda     Taylor          20.0         53.0           0.0   \n",
+       "1      Rhonda    Butcher          19.6         56.4           0.0   \n",
+       "2     Allanah    Butcher          17.8         36.5           0.0   \n",
+       "3     Allanah     Taylor          37.3          NaN           0.0   \n",
+       "4      Rhonda     Carter          21.8         50.0           0.0   \n",
+       "...       ...        ...           ...          ...           ...   \n",
+       "1204   Rhonda     Farmer          31.2         35.7           0.0   \n",
+       "1205   Rhonda     Carter          12.3         48.3           0.0   \n",
+       "1206   Rhonda     Carter           9.1         45.7           0.0   \n",
+       "1207   Rhonda  Carpenter          11.0         43.8           0.0   \n",
+       "1208   Rhonda     Farmer          15.0         43.5           1.0   \n",
+       "\n",
+       "      wine_delivered  wrongpizza quality  \n",
+       "0                0.0         0.0  medium  \n",
+       "1                0.0         0.0    high  \n",
+       "2                0.0         0.0     NaN  \n",
+       "3                0.0         0.0     NaN  \n",
+       "4                0.0         0.0  medium  \n",
+       "...              ...         ...     ...  \n",
+       "1204             0.0         0.0     low  \n",
+       "1205             0.0         0.0  medium  \n",
+       "1206             0.0         0.0  medium  \n",
+       "1207             0.0         0.0  medium  \n",
+       "1208             1.0         0.0  medium  \n",
+       "\n",
+       "[1209 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pizza = pd.read_excel('D:\\LabHw\\DescriptiveStat\\data\\pizza.xlsx')\n",
+    "pizza\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>wine_delivered</th>\n",
+       "      <th>0.0</th>\n",
+       "      <th>1.0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>driver</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Butcher</th>\n",
+       "      <td>85</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carpenter</th>\n",
+       "      <td>214</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Carter</th>\n",
+       "      <td>212</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Farmer</th>\n",
+       "      <td>100</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hunter</th>\n",
+       "      <td>139</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Miller</th>\n",
+       "      <td>109</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Taylor</th>\n",
+       "      <td>172</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "wine_delivered  0.0  1.0\n",
+       "driver                  \n",
+       "Butcher          85    9\n",
+       "Carpenter       214   56\n",
+       "Carter          212   19\n",
+       "Farmer          100   17\n",
+       "Hunter          139   15\n",
+       "Miller          109   16\n",
+       "Taylor          172   29"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "driver = pizza['driver']\n",
+    "winedelivered = pizza['wine_delivered']\n",
+    "table = pd.crosstab(driver, winedelivered)\n",
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Chi2ContingencyResult(statistic=21.02895299841279, pvalue=0.0018127696556709742, dof=6, expected_freq=array([[ 81.30369128,  12.69630872],\n",
+       "       [233.53187919,  36.46812081],\n",
+       "       [199.79949664,  31.20050336],\n",
+       "       [101.19714765,  15.80285235],\n",
+       "       [133.19966443,  20.80033557],\n",
+       "       [108.11661074,  16.88338926],\n",
+       "       [173.85151007,  27.14848993]]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c= stats.chi2_contingency(table)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "wine_delivered\n",
+       "0.0    1031\n",
+       "1.0     161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13279393129175543"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = np.sqrt(21.02/(1031+161))\n",
+    "f"
+   ]
   }
  ],
  "metadata": {
